[package]
name = "compiler"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-lang-compiler.workspace = true
cairo-lang-sierra.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
