[package]
name = "sierra_compile_sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-lang-compiler = { git = "https://github.com/starkware-libs/cairo", rev = "db0b090", default-features = false }
cairo-lang-sierra = { git = "https://github.com/starkware-libs/cairo", rev = "db0b090", default-features = false }
clap = { version = "4.3.10", features = ["derive"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
