add_subdirectory(air)
add_subdirectory(algebra)
add_subdirectory(cairo/lang/vm/cpp)
add_subdirectory(channel)
add_subdirectory(commitment_scheme)
add_subdirectory(composition_polynomial)
add_subdirectory(crypt_tools)
add_subdirectory(error_handling)
add_subdirectory(fft_utils)
add_subdirectory(fri)
add_subdirectory(gtest)
add_subdirectory(main)
add_subdirectory(math)
add_subdirectory(proof_system)
add_subdirectory(randomness)
add_subdirectory(stark)
add_subdirectory(statement)
add_subdirectory(stl_utils)
add_subdirectory(utils)
