add_library(commitment_scheme_builder INTERFACE)
target_link_libraries(commitment_scheme_builder INTERFACE caching_commitment_scheme packaging_commitment_scheme merkle_commitment_scheme channel)

add_library(table table_prover_impl.cc table_verifier_impl.cc table_impl_details.cc parallel_table_prover.cc)
target_link_libraries(table algebra channel)

add_executable(table_prover_impl_test table_prover_impl_test.cc)
target_link_libraries(table_prover_impl_test table starkware_gtest)
add_test(table_prover_impl_test table_prover_impl_test)

add_executable(parallel_table_prover_test parallel_table_prover_test.cc)
target_link_libraries(parallel_table_prover_test table starkware_gtest)
add_test(parallel_table_prover_test parallel_table_prover_test)

add_executable(table_verifier_impl_test table_verifier_impl_test.cc)
target_link_libraries(table_verifier_impl_test commitment_scheme_builder table starkware_gtest)
add_test(table_verifier_impl_test table_verifier_impl_test)

add_library(packer_hasher packer_hasher.cc)

add_library(packaging_commitment_scheme packaging_commitment_scheme.cc)
target_link_libraries(packaging_commitment_scheme pedersen_hash_context packer_hasher channel)

add_library(caching_commitment_scheme caching_commitment_scheme.cc)

add_executable(packaging_commitment_scheme_test packaging_commitment_scheme_test.cc)
target_link_libraries(packaging_commitment_scheme_test packaging_commitment_scheme packer_hasher channel starkware_gtest)
add_test(packaging_commitment_scheme_test packaging_commitment_scheme_test)

add_executable(commitment_scheme_test commitment_scheme_test.cc)
target_link_libraries(commitment_scheme_test caching_commitment_scheme merkle_commitment_scheme packaging_commitment_scheme channel starkware_gtest)
add_test(commitment_scheme_test commitment_scheme_test)

add_executable(caching_commitment_scheme_test caching_commitment_scheme_test.cc)
target_link_libraries(caching_commitment_scheme_test caching_commitment_scheme starkware_gtest)
add_test(caching_commitment_scheme_test caching_commitment_scheme_test)

add_subdirectory(merkle)
