add_library(fibonacci_air INTERFACE)
target_sources(fibonacci_air INTERFACE fibonacci_air.h)
target_link_libraries(fibonacci_air INTERFACE trace_generation_context composition_polynomial)

add_executable(fibonacci_air_test fibonacci_air_test.cc)
target_link_libraries(fibonacci_air_test fibonacci_air air_test_utils algebra lde starkware_gtest)
add_test(fibonacci_air_test fibonacci_air_test)
